Fix home video icon on safari mobile

--- a/app/assets/stylesheets/layouts/_l-header-home.scss
+++ b/app/assets/stylesheets/layouts/_l-header-home.scss
@@ -66,16 +66,19 @@
     }
 
     .media {
+      position: absolute;
+      bottom: rem(-80px);
+      left: 0;
+      right: 0;
       height: rem(60px);
       width: rem(60px);
+      margin: auto;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
       background-color: $white;
-      margin-bottom: rem(-80px);
-      position: absolute;
-      bottom: 0;
+      box-shadow: 0 rem(2px) rem(4px) 0 rgba($black, 0.1);
       z-index: 20;
 
       @media screen and (min-width: $screen-m) {
@@ -84,6 +87,7 @@
         border: solid 2px $color-1;
         width: rem(30px);
         height: rem(30px);
+        box-shadow: none;
       }
 
       .icon {
